# virtual-keyboard

./: .gitignore  CMakeLists.txt  README.md  button.cpp  button.h  callbacks.h  coord.pb.cc  coord.pb.h  coord_proc.cpp  coord_proc.h  data_receiver.cpp  data_receiver.h  keyboard  keyboard.cpp  keyboard.h  main.cpp  main.h  manager.cpp  manager.h  osg_stuff.cpp  osg_stuff.h  two_dim_manipulator.cpp
